appId: com.anonymous.feupload
---
- launchApp:
    clearState: true
- tapOn: Email
- inputText: test2@example.com
- tapOn: Password
- inputText: "test2"
- tapOn: Sign In
- extendedWaitUntil:
    visible: "Bem-vindo, "
    timeout: 40000
- extendedWaitUntil:
    visible: Laboratório de Computadores
    timeout: 20000
- tapOn: Laboratório de Computadores
- tapOn: Exames
- tapOn: Enviar
- tapOn:
    text: Enviar material
    index: 1
- assertVisible: Por favor indica um título.
- tapOn: "ex: Exame 2023 – 1ª Época"
- inputText: Exame 123
- assertVisible: Exame 123
- tapOn: Back
- tapOn:
    text: Enviar material
    index: 1
- assertVisible: Por favor seleciona uma cadeira.
- tapOn: Selecionar cadeira
- tapOn: ALGA Álgebra Linear e Geometria Analítica
- assertVisible: ALGA – Álgebra Linear e Geometria Analítica
- tapOn: Selecionar ano letivo
- tapOn: 2025/2026
- assertVisible: 2025/2026
- tapOn:
    text: Enviar material
    index: 1
- assertVisible: Por favor seleciona o tipo de material.
- tapOn: Selecionar tipo de material
- tapOn: Exame
- assertVisible: Exame
- tapOn: Escolher ficheiro
- assertVisible:
    id: toolbar
- tapOn: Back
